--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
-@import url('./styles/style.css');
+@import url('./styles/nav.css');
+@import url('./styles/main.css');
+@import url('./styles/contacts.css');
+@import url('./styles/about.css');
+@import url('./styles/services.css');
+@import url('./styles/about.css');
+@import url('./styles/footer.css');
+
+:root {
+    --main-bg: #35424a;
+    --secondary-bg: #f8d64d;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 100vw;
+    /* overflow-y: hidden; */
+}
+
+main {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    background: linear-gradient(to bottom, #f4f4f4, #ffffff);
+}
