--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #35424a;
+    background-color: var(--main-bg);
     color: #ffffff;
     padding: 1rem 0;
     text-align: center;
