gallery and prices html and css

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 @import url('./styles/about.css');
 @import url('./styles/services.css');
 @import url('./styles/about.css');
+@import url('./styles/gallery.css');
+@import url('./styles/prices.css');
 @import url('./styles/footer.css');
 
 :root {
