--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -74,7 +74,6 @@
     margin-bottom: 2rem;
     text-align: center;
     flex: 1;
-    /* max-width: 50%; */
     height: 100%;
 }
 
@@ -100,6 +99,6 @@
     }
 
     #map {
-        min-width: 450px;
+        width: 100%;
     }
 }
