--- a/styles/nav.css
+++ b/styles/nav.css
@@ -19,6 +19,19 @@ header .container {
     align-items: center;
 }
 
+header .container #branding {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+header .container #branding img {
+    width: 150px;
+    height: 75px;
+}
+
 header a {
     color: #ffffff;
     text-decoration: none;
@@ -45,4 +58,17 @@ header .current a {
 
 header a:hover {
     color: #cccccc;
+}
+
+@media screen and (max-width: 500px) {
+    header .container #branding {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    header nav ul {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
